added advertise block

--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -38,6 +38,23 @@
 					<h2>Fotoobrazy na míru</h2>
 				</div>
 			</div>
+			<div class="advert">
+				<h2>HLEDÁME DO TÝMU NOVÉHO KOLEGU</h2>
+				POŽADAVKY:
+				<ul>
+					<li>bezúhonnost</li>
+					<li>100% spolehlivost</li>
+					<li>ochota učit se novým věcem</li>
+					<li>manuální zručnost</li>
+				</ul>
+				NÁPLŇ PRÁCE:
+				<ul>
+					<li>lepení</li>
+					<li>montáže</li>
+					<li>obsluha tiskových strojů</li>
+				</ul>
+				Praxe v oboru výhodou.
+			</div>
 			{include #content|indent:3}
 			<div id="foot">
 				<div id="bnrBtm">
